--- a/package.json
+++ b/package.json
@@ -12,14 +12,16 @@
   "dependencies": {
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-select": "^2.1.6",
+    "@tanstack/react-query": "^5.81.2",
     "class-variance-authority": "^0.7.1",
     "lucide-react": "^0.483.0",
-    "next": "14.1.0",
+    "next": "^14.2.30",
+    "pino-pretty": "^13.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "recharts": "^2.15.1",
-    "viem": "^1.19.11",
-    "wagmi": "^1.3.10"
+    "viem": "^2.31.4",
+    "wagmi": "^2.15.6"
   },
   "devDependencies": {
     "@types/node": "^20",
